# ensemble-stage

./: .gitignore  Cargo.toml  README.md
.claude/: settings.json
.github/workflows/: ci.yml  deploy.yml  e2e.yml
docs/: api.md  deploy.md  development.md  ensemble-integration.md  quickstart.md
docs/reference/: cli.md  sweeps.md  training.md
integration/: pyproject.toml
integration/scripts/: smoke_test.py
integration/src/ensemble_stage/: __init__.py  cli.py  run.py  stage.py
integration/tests/: test_stage.py
ops/: Dockerfile  fly.toml
ops/migrations/: 001_initial_schema.sql
server/: Cargo.toml  askama.toml
server/src/: config.rs  db.rs  error.rs  lib.rs  main.rs
server/src/auth/: github.rs  middleware.rs  mod.rs
server/src/models/: artifact.rs  comparison.rs  mod.rs  org.rs  project.rs  run.rs  sweep.rs  training.rs  user.rs
server/src/routes/: auth.rs  mod.rs  web.rs
server/src/routes/v1/: events.rs  me.rs  mod.rs  orgs.rs  projects.rs  runs.rs  sweeps.rs  training_runs.rs
server/tests/: e2e.rs
tests/e2e/: README.md  conftest.py  pyproject.toml  test_compare.py  test_integration.py  test_run_detail.py  test_settings.py  test_sweep_detail.py  test_sweeps.py  test_training_detail.py
web/: README.md
web/static/: app.js  style.css  viewer.js
web/static/styles/: base.css  tokens.css
web/templates/: account.html  base-app.html  base.html  cli_done.html  compare.html  landing.html  org.html  project.html  run_detail.html  settings.html  sweep.html  sweeps_list.html  training_list.html  training_run.html
web/templates/partials/: api_keys_section.html  runs_rows.html
